[package]
name = "cautious-waffle"
version = "0.4.2"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.4", features = ["headers", "json"] }
#axum-macros = "0.3.7"
axum-server = "0.4.4"
clap = { version = "4.0.32", features = ["cargo"] }
env_logger = "0.10.0"
headers = "0.3.8"
hyper = { version = "0.14.20", features = ["http2"] }
log = { version = "0.4.1", features = ["release_max_level_debug", "max_level_debug"] }
notify = "5.1.0"
oneshot = "0.1.5"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls-native-roots", "socks", "json"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
sha256 = "1.1.1"
tokio = { version = "1.24.1", features = ["full"] }
toml = "0.7.2"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
uuid = "1.3.0"
