[package]
name = "cautious-waffle"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
#axum-macros = "0.5"
axum-server = "0.7"
clap = { version = "4.0", features = ["cargo"] }
env_logger = "0.11"
headers = "0.4"
hyper = { version = "1.6", features = ["http2"] }
log = { version = "0.4", features = [
    "release_max_level_debug",
    "max_level_debug",
] }
notify = "^8.0"
oneshot = "0.1.5"
reqwest = { version = "^0.12", default-features = false, features = [
    "rustls-tls-native-roots",
    "socks",
    "json",
] }
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
uuid = "1"
